# CHelper

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.py  build.sh  build.sh.backup
Project/FFmpeg/: main.c
Project/FTXUI/: main.cpp
Project/Random/: main.c
Project/SizeOfTest/: main.c
Project/Test/: main.c
SDK/: Foundation.c  Foundation.h
